--- a/src/plugins/strategies/Makefile
+++ b/src/plugins/strategies/Makefile
@@ -1,7 +1,7 @@
 TO_BASE=../../..
 
-override CFLAGS+=-fPIC
-override CPPFLAGS+=-I$(TO_BASE)/src
+REQ_CFLAGS+=-fPIC
+REQ_CPPFLAGS+=-I$(TO_BASE)/src
 
 TCL_INCDIR?=/usr/include
 TCL_LIBDIR?=/usr/lib64
@@ -19,23 +19,20 @@ LIBEXEC_TGTS=exhaustive.so \
              pro.so \
              nemo.so
 
-exhaustive.so: override LDLIBS+=-lm
+exhaustive.so: REQ_LDLIBS+=-lm
 exhaustive.so: libvertex.o
 
-random.so: override LDLIBS+=-lm
+random.so: REQ_LDLIBS+=-lm
 random.so: libvertex.o
 
-nm.so: override LDLIBS+=-lm
+nm.so: REQ_LDLIBS+=-lm
 nm.so: libvertex.o
 
-pro.so: override LDLIBS+=-lm
+pro.so: REQ_LDLIBS+=-lm
 pro.so: libvertex.o
 
-nemo.so: override LDLIBS+=-lm
+nemo.so: REQ_LDLIBS+=-lm
 nemo.so: libvertex.o
-
-%.so: %.o
-	$(CC) -shared $(LDFLAGS) $(CFLAGS) $^ $(LOADLIBES) $(LDLIBS) -o $@
 
 # Active Harmony makefiles should always include this file last.
 include $(TO_BASE)/Makefile.common
