Eliminate excessive use of -fPIC flag.
The flag is only needed for code that will be included in shared
objects.  Object files for libharmony.a and executable programs do
not need this flag.

--- a/src/plugins/layers/Makefile
+++ b/src/plugins/layers/Makefile
@@ -19,8 +19,8 @@ LIBEXEC_TGTS=agg.so \
              group.so \
              httpinfo.so \
              log.so
+SHARED_OBJS=$(filter %.so, $(LIBEXEC_TGTS))
 
-REQ_CFLAGS+=-fPIC
 REQ_CPPFLAGS+=-I$(TO_BASE)/src
 
 LIBTAUDB=
@@ -45,6 +45,7 @@ ifneq (, $(wildcard $(LIBXML2_INCDIR)/libxml/xmlwriter.h))
     xmlWriter.so: REQ_LDLIBS+=-lxml2
 endif
 
+$(SHARED_OBJS:%.so=%.o): REQ_CFLAGS+=-fPIC
 
 codegen-helper: $(TO_BASE)/src/libharmony.a
 
