--- a/Makefile.common
+++ b/Makefile.common
@@ -16,22 +16,7 @@ includedir=$(prefix)/include
 TGTS=$(BIN_TGTS) $(LIB_TGTS) $(INCLUDE_TGTS) $(LIBEXEC_TGTS) $(NO_INST_TGTS)
 
 ifeq (Free, $(findstring Free,$(shell $(CC) --version 2>&1)))
-    REQ_CFLAGS+=-std=c99
-else
-    REQ_CFLAGS+=-c99
-endif
-
-ifeq ($(DEBUG), 1)
-    REQ_CFLAGS+=-g
-    REQ_CXXFLAGS+=-g
-else
-    REQ_CFLAGS+=-O2
-    REQ_CXXFLAGS+=-O2
-endif
-
-ifeq ($(STRICT), 1)
-    REQ_CFLAGS+=-pedantic -Wall -Werror
-    REQ_CXXFLAGS+=-pedantic -Wall -Werror
+    include $(TO_BASE)/make/gcc.mk
 endif
 
 #
