Add support for building with Intel compilers.
Set CC=icc and CXX=icpc to use the Intel compilers.  Successful build
verified with DEBUG=1 and STRICT=1 using ICC 12.1.4.

Code updated to remove pointless comparison of unsigned integer with
zero for successful build with STRICT=1.

--- a/Makefile.common
+++ b/Makefile.common
@@ -17,6 +17,8 @@ TGTS=$(BIN_TGTS) $(LIB_TGTS) $(INCLUDE_TGTS) $(LIBEXEC_TGTS) $(NO_INST_TGTS)
 
 ifeq (Free, $(findstring Free,$(shell $(CC) --version 2>&1)))
     include $(TO_BASE)/make/gcc.mk
+else ifeq (Intel, $(findstring Intel,$(shell $(CC) --version 2>&1)))
+    include $(TO_BASE)/make/intel.mk
 endif
 
 #
