Add support for building with PGI compilers.
Set CC=pgcc and CXX=pgCC to use the Portland Group compilers.
Successful build verified with DEBUG=1 and STRICT=1 using PGI
Workstation 15.4-0.

Code updated to eliminate warnings by removing direct use of the
INFINITY macro.

--- a/Makefile.common
+++ b/Makefile.common
@@ -19,6 +19,8 @@ ifeq (Free, $(findstring Free,$(shell $(CC) --version 2>&1)))
     include $(TO_BASE)/make/gcc.mk
 else ifeq (Intel, $(findstring Intel,$(shell $(CC) --version 2>&1)))
     include $(TO_BASE)/make/intel.mk
+else ifeq (Portland, $(findstring Portland,$(shell $(CC) --version 2>&1)))
+    include $(TO_BASE)/make/pgi.mk
 endif
 
 #
