--- a/Makefile.common
+++ b/Makefile.common
@@ -15,12 +15,13 @@ libexecdir=$(exec_prefix)/libexec
 includedir=$(prefix)/include
 TGTS=$(BIN_TGTS) $(LIB_TGTS) $(INCLUDE_TGTS) $(LIBEXEC_TGTS) $(NO_INST_TGTS)
 
-ifeq (Free, $(findstring Free,$(shell $(CC) --version 2>&1)))
-    include $(TO_BASE)/make/gcc.mk
-else ifeq (Intel, $(findstring Intel,$(shell $(CC) --version 2>&1)))
+CC_DEFS=$(shell eval "echo | $(CC) -dM -E - 2>&1; $(CC) -dM 2>&1")
+ifeq (__ICC, $(findstring __ICC, $(CC_DEFS)))
     include $(TO_BASE)/make/intel.mk
-else ifeq (Portland, $(findstring Portland,$(shell $(CC) --version 2>&1)))
+else ifeq (__PGI, $(findstring __PGI, $(CC_DEFS)))
     include $(TO_BASE)/make/pgi.mk
+else
+    include $(TO_BASE)/make/gcc.mk
 endif
 
 #
