Add support for building with the Clang compiler.
Set CC=clang and CXX=clang++ to use the Clang compiler.  Successful
build verified with DEBUG=1 and STRICT=1 using Clang 3.5.0.

Updated code to remove unreachable code, unused parameters, and
shadowed variables.

--- a/Makefile.common
+++ b/Makefile.common
@@ -20,6 +20,8 @@ ifeq (__ICC, $(findstring __ICC, $(CC_DEFS)))
     include $(TO_BASE)/make/intel.mk
 else ifeq (__PGI, $(findstring __PGI, $(CC_DEFS)))
     include $(TO_BASE)/make/pgi.mk
+else ifeq (__clang__, $(findstring __clang__, $(CC_DEFS)))
+    include $(TO_BASE)/make/clang.mk
 else
     include $(TO_BASE)/make/gcc.mk
 endif
