--- a/example/Makefile
+++ b/example/Makefile
@@ -8,4 +8,4 @@ SUBDIRS=client_api \
 	xml
 
 # Active Harmony makefiles should always include this file last.
-include $(TO_BASE)/Makefile.common
+include $(TO_BASE)/make/common.mk
