--- a/example/code_generation/Makefile
+++ b/example/code_generation/Makefile
@@ -15,4 +15,4 @@ else
 endif
 
 # Active Harmony makefiles should always include this file last.
-include $(TO_BASE)/Makefile.common
+include $(TO_BASE)/make/common.mk
