--- a/src/plugins/layers/Makefile
+++ b/src/plugins/layers/Makefile
@@ -50,4 +50,4 @@ $(SHARED_OBJS:%.so=%.o): REQ_CFLAGS+=-fPIC
 codegen-helper: $(TO_BASE)/src/libharmony.a
 
 # Active Harmony makefiles should always include this file last.
-include $(TO_BASE)/Makefile.common
+include $(TO_BASE)/make/common.mk
