--- a/example/taudb/Makefile
+++ b/example/taudb/Makefile
@@ -7,4 +7,4 @@ example: REQ_CFLAGS+=-I$(TO_BASE)/src
 example: $(TO_BASE)/src/libharmony.a
 
 # Active Harmony makefiles should always include this file last.
-include $(TO_BASE)/Makefile.common
+include $(TO_BASE)/make/common.mk
