Rename any NEMO to ANGEL.

--- a/src/plugins/strategies/Makefile
+++ b/src/plugins/strategies/Makefile
@@ -4,24 +4,24 @@ REQ_CFLAGS+=-fPIC
 REQ_CPPFLAGS+=-I$(TO_BASE)/src
 REQ_LDFLAGS+=$(SHAREDOBJ_FLAG)
 
-SRCS=libvertex.c \
+SRCS=angel.c \
      exhaustive.c \
-     random.c \
+     libvertex.c \
      nm.c \
      pro.c \
-     nemo.c
+     random.c
 
-LIBEXEC_TGTS=exhaustive.so \
-             random.so \
+LIBEXEC_TGTS=angel.so \
+             exhaustive.so \
              nm.so \
              pro.so \
-             nemo.so
+             random.so
+
+angel.so: REQ_LDLIBS+=-lm
+angel.so: libvertex.o
 
 exhaustive.so: REQ_LDLIBS+=-lm
 exhaustive.so: libvertex.o
-
-random.so: REQ_LDLIBS+=-lm
-random.so: libvertex.o
 
 nm.so: REQ_LDLIBS+=-lm
 nm.so: libvertex.o
@@ -29,8 +29,8 @@ nm.so: libvertex.o
 pro.so: REQ_LDLIBS+=-lm
 pro.so: libvertex.o
 
-nemo.so: REQ_LDLIBS+=-lm
-nemo.so: libvertex.o
+random.so: REQ_LDLIBS+=-lm
+random.so: libvertex.o
 
 # Active Harmony makefiles should always include this file last.
 include $(TO_BASE)/make/common.mk
