--- a/example/.gitignore
+++ b/example/.gitignore
@@ -1,6 +1,6 @@
-client_api/example
-client_api/fortran
 client_api/chapel
+client_api/fortran
+client_api/minimal
 code_generation/gemm
 synth/synth
 unique_points.tuna.dat
