Add features to support multi-client join testing.
Programs in client_api now take an optional session name, and add a
join-only client program.

--- a/example/client_api/Makefile
+++ b/example/client_api/Makefile
@@ -1,9 +1,14 @@
 TO_BASE=../..
 
-SRCS=loadfile.c \
+SRCS=join.c \
+     loadfile.c \
      minimal.c
-NO_INST_TGTS=loadfile \
+NO_INST_TGTS=join \
+             loadfile \
              minimal
+
+join: REQ_CPPFLAGS+=-I$(TO_BASE)/src
+join: $(TO_BASE)/src/libharmony.a
 
 loadfile: REQ_CPPFLAGS+=-I$(TO_BASE)/src
 loadfile: $(TO_BASE)/src/libharmony.a
