--- a/example/client_api/Makefile
+++ b/example/client_api/Makefile
@@ -2,10 +2,12 @@ TO_BASE=../..
 
 SRCS=join.c \
      loadfile.c \
-     minimal.c
+     minimal.c \
+     multi.c
 NO_INST_TGTS=join \
              loadfile \
-             minimal
+             minimal \
+             multi
 
 join: REQ_CPPFLAGS+=-I$(TO_BASE)/src
 join: $(TO_BASE)/src/libharmony.a
@@ -15,6 +17,9 @@ loadfile: $(TO_BASE)/src/libharmony.a
 
 minimal: REQ_CPPFLAGS+=-I$(TO_BASE)/src
 minimal: $(TO_BASE)/src/libharmony.a
+
+multi: REQ_CPPFLAGS+=-I$(TO_BASE)/src
+multi: $(TO_BASE)/src/libharmony.a
 
 # ifeq (0, $(shell which $(FC) > /dev/null 2>&1; echo $$?))
 #     SRCS+=fortran.f
