--- a/example/.gitignore
+++ b/example/.gitignore
@@ -4,6 +4,7 @@ client_api/join
 client_api/loadfile
 client_api/minimal
 client_api/multi
+client_api/users_guide
 code_generation/gemm
 synth/synth
 unique_points.tuna.dat
